# wal2kafka

./: .dockerignore  Dockerfile.postgresql  Dockerfile.wal2kafka  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/postgresql/data/: .gitignore  postgresql.conf
wal2kafka/: main.py  wait.py
